ENT-5402: Build release OC SSO Notification 2.5.0